# PyCharacterAI

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
PyCharacterAI/: __init__.py  chat.py  client.py  exceptions.py  message.py  requester.py
PyCharacterAI/methods/: __init__.py  account.py  character.py  chat.py  user.py  utils.py
PyCharacterAI/methods/asynchronous/: account.py  character.py  chat.py  user.py  utils.py
PyCharacterAI/methods/synchronous/: __init__.py  account.py  character.py  chat.py  user.py  utils.py
PyCharacterAI/types/: __init__.py  base.py  character.py  chat.py  media.py  message.py  user.py
docs/: getting_started.md  welcome.md
docs/api_reference/: chat.md  client.md  methods.md  types.md
docs/api_reference/messages/: message.md  message_history.md  reply.md
docs/api_reference/methods/: account.md  character.md  chat.md  user.md  utils.md
docs/api_reference/types/: character.md  chat.md  media.md  message.md  user.md
docs/resources/: voices.json
examples/: 01_simple_example.py  simple_example.py  simple_example_streaming.py
examples/02_working_with_images/: 02_1_image_generation.py  02_2_image_uploading.py
examples/03_working_with_voice/: 03_1_text_to_speech.py
